--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Loop 1 - Step 1</title>
   <link href="https://fonts.googleapis.com/css?family=Roboto:400,500,700" rel="stylesheet">
-  <link rel="stylesheet" href="./styles.css" />
+  <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
   <div class="root clearfix">
       <div class="item">
-       <img src="img/device.svg" class="item_image">
+       <img src="device.svg" class="item_image">
        <h2 class="item_name">Mobile</h2>
        <p class="item_description">
         Get notifications about new releases in our mobile app.
@@ -23,7 +23,7 @@
         </div>
        </div>
       <div class="item">
-       <img src="img/laptop.svg" class="item_image">
+       <img src="laptop.svg" class="item_image">
        <h2 class="item_name">desktop</h2>
        <p class="item_description">
         Enjoy new episodes on your laptop in browser with our web service, which supports all the platforms.
@@ -35,7 +35,7 @@
         </div>
        </div>
       <div class="item">
-       <img src="img/monitor.svg" class="item_image">
+       <img src="monitor.svg" class="item_image">
        <h2 class="item_name">tv</h2>
        <p class="item_description">
         Watch your favorite series at home on large screen with our TV application.
